--- a/TomJerry/Static/index.html
+++ b/TomJerry/Static/index.html
@@ -6,6 +6,15 @@
 </head>
 <body>
 <p>hello</p>
+<a href="cricket.html">cricket</a>
+<a href="hockey.html">hockey</a>
+<a href="badminton.html">badminton</a>
+<a href="baseball.html">baseball</a>
+<a href="fooball.html">fooball</a>
+<a href="football.html">football</a>
+<a href="kabbadi.html">kabbadi</a>
+<a href="karate.html">karate</a>
+<a href="volleyball.html">volleyball</a>
 <form action="send">
     <input type="submit" value="click" style="color:yellow;background:blue"/>
 </form>
