--- a/Appointment_details_app/src/webapps/appointment.html
+++ b/Appointment_details_app/src/webapps/appointment.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Details</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Appointment </a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
@@ -27,9 +27,9 @@
     </div>
 </nav>
 <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <div align="center" style="border: 2px solid #000; padding: 20px; width: 400px; border-radius: 10px;">
-        <h1> Contact Details</h1>
-        <form action="details" method="post">
+    <div align="center" style="border: 2px solid #000; padding: 20px; width: 500px; border-radius: 10px;">
+        <h1> Appointment Details</h1>
+        <form action="details" method="get">
             FirstName : <input type="text" placeholder="enter your firstname" name="firstname"><br><br>
             LastName : <input type="text" placeholder="enter your lastname" name="lastname"><br><br>
             Email : <input type="text" placeholder="enter your email" name="email"><br><br>
