--- a/Appointment_details_app/src/webapps/index.html
+++ b/Appointment_details_app/src/webapps/index.html
@@ -9,6 +9,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
+
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,6 +18,9 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="appointment.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="contact.html">Home</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
